--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Sikho</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            height: 100vh;
+            background-color: #f5f5f5;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to [Your Business Name]</h1>
-    <p>This is a placeholder page for [Your Business Name]. Our full website is coming soon.</p>
+    <h1>Welcome to Code Sikho</h1>
+    <p>This is a placeholder page for Code Sikho. Our full website is coming soon.</p>
 </body>
 </html>
